<resources>
    <string name="app_name">GameAppVer0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abhi_add_nhi_hoga">abhi add nhi hoga</string>
    <string name="enter_details">Enter Details</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="add">add</string>
    <string name="date">Date</string>
    <string name="reward_coins">Reward coins</string>
    <string name="description">Description</string>
    <string name="guest">Guest</string>
    <string name="save">SAVE</string>

    <string-array name="list1">
        <item>yatish #1</item>
        <item>yatish #2</item>
        <item>yatish #3</item>
        <item>yatish #4</item>
        <item>yatish #5</item>
        <item>yatish #6</item>
        <item>yatish #7</item>
        <item>yatish #8</item>
    </string-array>
</resources>
